@@ -1204,6 +1204,33 @@ name|postingsEnum
 init|=
 literal|null
 decl_stmt|;
+name|int
+index|[]
+name|docsMatchingRanges
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|ranges
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// +1 because documents can belong to *zero*, one, several or all ranges in rangesArr
+name|docsMatchingRanges
+operator|=
+operator|new
+name|int
+index|[
+name|rangesArr
+operator|.
+name|length
+operator|+
+literal|1
+index|]
+expr_stmt|;
+block|}
 name|CharsRefBuilder
 name|idRef
 init|=
@@ -1387,6 +1414,11 @@ expr_stmt|;
 block|}
 else|else
 block|{
+name|int
+name|matchingRangesCount
+init|=
+literal|0
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1428,8 +1460,116 @@ argument_list|(
 name|doc
 argument_list|)
 expr_stmt|;
+operator|++
+name|matchingRangesCount
+expr_stmt|;
 block|}
 block|}
+name|docsMatchingRanges
+index|[
+name|matchingRangesCount
+index|]
+operator|++
+expr_stmt|;
+block|}
+block|}
+block|}
+if|if
+condition|(
+name|docsMatchingRanges
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|int
+name|ii
+init|=
+literal|0
+init|;
+name|ii
+operator|<
+name|docsMatchingRanges
+operator|.
+name|length
+condition|;
+name|ii
+operator|++
+control|)
+block|{
+if|if
+condition|(
+literal|0
+operator|==
+name|docsMatchingRanges
+index|[
+name|ii
+index|]
+condition|)
+continue|continue;
+switch|switch
+condition|(
+name|ii
+condition|)
+block|{
+case|case
+literal|0
+case|:
+comment|// document loss
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Splitting {}: {} documents belong to no shards and will be dropped"
+argument_list|,
+name|reader
+argument_list|,
+name|docsMatchingRanges
+index|[
+name|ii
+index|]
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+literal|1
+case|:
+comment|// normal case, each document moves to one of the sub-shards
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Splitting {}: {} documents will move into a sub-shard"
+argument_list|,
+name|reader
+argument_list|,
+name|docsMatchingRanges
+index|[
+name|ii
+index|]
+argument_list|)
+expr_stmt|;
+break|break;
+default|default:
+comment|// document duplication
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Splitting {}: {} documents will be moved to multiple ({}) sub-shards"
+argument_list|,
+name|reader
+argument_list|,
+name|docsMatchingRanges
+index|[
+name|ii
+index|]
+argument_list|,
+name|ii
+argument_list|)
+expr_stmt|;
+break|break;
 block|}
 block|}
 block|}
